# perception-core

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  PROTOBUF_CONAN_INTEGRATION_HANDOFF.md  README.md  build.bat  build_gtest.bat  build_sil.bat  build_standalone.bat  conanfile.py
adapters/autosar/: perception_core_service.cpp
adapters/standalone/: main.cpp
conf/: build.yml
config/: default.yaml
models/: .gitkeep
scripts/: resolve_interfaces_dir.bat
src/component/: CMakeLists.txt
src/component/detection/: CameraDetector.cpp  CameraDetector.hpp
src/component/free_space/: FreeSpaceDetector.cpp  FreeSpaceDetector.hpp
src/component/tracking/: MultiObjectTracker.cpp  MultiObjectTracker.hpp
src/detection/: CameraDetector.cpp  CameraDetector.hpp
src/platform/autosar/: CMakeLists.txt
src/platform/sil/: CMakeLists.txt  perception_core_node.cpp
src/platform/standalone/: CMakeLists.txt  main.cpp
src/project/: README.md
src/tracking/: MultiObjectTracker.cpp
tests/: CMakeLists.txt
tests/unit/: test_detector.cpp  test_tracker.cpp
